# simple-midi-controller

./: .gitignore  README.md  build.sh  keycap 1u blank.FCStd  keycap-1u-blank.stl  model.FCStd
.github/workflows/: build-firmware.yml
Code/: CMakeLists.txt
Code/src/: CMakeLists.txt
Code/src/firmware/: CMakeLists.txt  main.c  main.cpp  main.h  segments.h  tusb_config.h  usb_descriptors.c
Code/src/lib/: CMakeLists.txt
Code/src/lib/max7219_driver/: CMakeLists.txt  max7219_driver.c  max7219_driver.h
Kicad/: fp-info-cache  fp-lib-table  simple-midi-controller.bak  simple-midi-controller.kicad_pcb  simple-midi-controller.kicad_prl  simple-midi-controller.kicad_pro  simple-midi-controller.kicad_sch  simple-midi-controller.kicad_sym  sym-lib-table
Kicad/gerber/: simple-midi-controller-B_Cu.gbr  simple-midi-controller-B_Mask.gbr  simple-midi-controller-B_Paste.gbr  simple-midi-controller-B_Silkscreen.gbr  simple-midi-controller-Edge_Cuts.gbr  simple-midi-controller-F_Cu.gbr  simple-midi-controller-F_Mask.gbr  simple-midi-controller-F_Paste.gbr  simple-midi-controller-F_Silkscreen.gbr  simple-midi-controller-NPTH.drl  simple-midi-controller-PTH.drl  simple-midi-controller-job.gbrjob
Kicad/simple-midi-controller.pretty/: RP2040-Zero.kicad_mod
